@@ -12,14 +12,16 @@ public class JavaCompiler implements  Compiler {
     @Override
     public void compile(String directory, String className) throws IOException {
 
-                    Process process = new ProcessBuilder("javac",directory+className)
-                            .redirectErrorStream(true)
-                            .start();
-         BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        Process process = new ProcessBuilder("javac",directory+className)
+                .redirectErrorStream(false)
+                .start();
+//
+//        Process process = Runtime.getRuntime().exec("javac "+ directory+className);
+        BufferedReader br = new BufferedReader(new InputStreamReader(process.getErrorStream()));
 
         //Throw same exeption
-        if(!(br.readLine()!=null && br.readLine().isEmpty())){
-            System.out.println("Error");
-        }
+       if(br!=null && br.readLine()!=null && !br.readLine().isEmpty()){
+           throw  new IllegalArgumentException();
+       }
     }
 }
